updates dependencies